--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.13",
     "animate.css": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "ngx-toastr": "^19.1.0",
     "postcss": "^8.5.6",
     "primeng": "^20.1.2",
@@ -48,6 +49,7 @@
     "@angular/build": "^20.3.1",
     "@angular/cli": "^20.3.1",
     "@angular/compiler-cli": "^20.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
