--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.1.0",
     "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.13",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
